--- a/demo.css
+++ b/demo.css
@@ -49,3 +49,19 @@ header {
     padding-top: 20px;
     color:rgb(211, 218, 240);
   }
+
+  @media only screen and (max-width: 600px) {
+    img {
+      width: 100%;
+      height: auto;
+  }
+  }
+
+  @media only screen and (min-width: 600px) {
+    .cards {
+      display:flex;
+    }
+    .card {
+      margin: 50px;
+    }
+  }
